<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@color/arena_bg">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <io.kate.coatrack.CoatRackView
            android:id="@+id/ring_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000" />

        <Button
            android:id="@+id/button_eruption2"
            style="@style/EffectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/eruption" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_eruption"
            style="@style/EffectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eruption" />

        <Button
            android:id="@+id/button_pinwheel"
            style="@style/EffectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pinwheel" />

        <Button
            android:id="@+id/button_random"
            style="@style/EffectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/random" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0"
        android:background="@color/arena_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/signal"
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/signal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signal"
                    android:textColor="@color/signal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/attention"
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/attention" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attention"
                    android:textColor="@color/attention" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/meditation"
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/meditation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meditation"
                    android:textColor="@color/meditation" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewer1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="3"
            android:gravity="center" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>